--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -63,7 +63,7 @@ jobs:
           # See above where the token is generated: we can't use regular secrets.GITHUB_TOKEN
           # since the push needs to trigger actions again
           GITHUB_TOKEN: "${{ steps.app-token.outputs.token }}"
-          spec: ... except //release-controller/... except attr(name, '.*oci_image.*', //...)
+          spec: ... except //release-controller/... except //trusted-neurons-alerts/... except attr(name, '.*oci_image.*', //...)
       - name: "🚀 Testing"
         env:
           STAGING_PRIVATE_KEY_PEM: "${{ secrets.STAGING_PRIVATE_KEY_PEM }}"
@@ -72,7 +72,7 @@ jobs:
           mkdir -p ~/.config/dfx/identity/bootstrap-super-leader/
           echo $STAGING_PRIVATE_KEY_PEM > ~/.config/dfx/identity/bootstrap-super-leader/identity.pem
           t=$(mktemp) ; trap 'rm -f "$t"' EXIT
-          bazel query "... except //release-controller/... except attr(tags, 'manual', //...) except attr(name, '.*oci_image.*', //...)" > "$t"
+          bazel query "tests(...) except //release-controller/... except //trusted-neurons-alerts/... except attr(tags, 'manual', //...) except attr(name, '.*oci_image.*', //...)" > "$t"
           set -x
           if [ "$(stat -c %s "$t")" = "0" ] ; then echo No testing targets found >&2 ; exit 0 ; fi
           bazel test --target_pattern_file="$t" --config=ci --test_env=HOME=/home/runner
