--- a/.github/workflows/release-controller.yaml
+++ b/.github/workflows/release-controller.yaml
@@ -9,6 +9,7 @@ on:
       - pyproject.toml
       - "*.bazel"
       - bazel/**
+      - tools/**
       - .github/**
   pull_request:
     paths:
@@ -17,6 +18,7 @@ on:
       - pyproject.toml
       - "*.bazel"
       - bazel/**
+      - tools/**
       - .github/**
   workflow_dispatch:
 
@@ -69,10 +71,11 @@ jobs:
         run: |
           set -e
           t=$(mktemp) ; t2=$(mktemp) ; trap 'rm -f "$t" "$t2"' EXIT
-          bazel query "//release-controller/... except attr(tags, 'manual', //...) except attr(name, '.*oci_image.*', //release-controller/...)" > "$t"
-          set -x
+          bazel query "tests(//release-controller/...) except attr(tags, 'manual', //...) except attr(name, '.*oci_image.*', //release-controller/...)" > "$t"
+          if [ "$(stat -c %s "$t")" = "0" ] ; then echo No testing targets found >&2 ; exit 0 ; fi
           r=0
-          bazel test --target_pattern_file="$t" --config=ci --test_env=HOME=/home/runner --explain="$t2" --verbose_explanations || r=?
+          set -x
+          bazel test --target_pattern_file="$t" --config=ci --test_env=HOME=/home/runner --explain="$t2" --verbose_explanations || r=$?
           #echo === Explanations === >&2
           #cat "$t2" >&2
           #echo == /Explanations === >&2
