--- a/release-index.yaml
+++ b/release-index.yaml
@@ -1,5 +1,11 @@
 releases:
   # NOTE: Make sure to mark security hotfixes with the `security_fix: true` flag.
+  - rc_name: rc--2025-04-03_03-15
+    versions:
+      # Qualification pipeline:
+      # https://github.com/dfinity/ic/actions/runs/14234146433
+      - name: base
+        version: 68fc31a141b25f842f078c600168d8211339f422
   - rc_name: rc--2025-03-27_03-14
     versions:
       # Qualification pipeline:
