--- a/rs/dre-canisters/node-provider-rewards/rewards-calculation/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/rewards-calculation/Cargo.toml
@@ -23,6 +23,7 @@ chrono = { version = "0.4.38", default-features = false, features = [
     "clock",
     "serde",
 ] }
+maplit = "1.0"
 
 [lib]
 name = "rewards_calculation"
