This pull request addressess https://dfinity.atlassian.net/browse/DRE-395 .
The main feature added is support for HostOS in the commit annotator and
the reconciler.

* Commit annotations for HostOS.
* Forum posts and release notes composed for HostOS.
* Submissions of proposals for HostOS election.

HostOS is only published in its `base` version.  Feature releases do not
get elected for HostOS.

In addition to that, reconciler gains a feature (which will have to be
properly configured in the Kubernetes pod) whereby commit annotations are
fetched from the annotator instead of from the local Git repository. With
this change, the reconciler asks the annotator for commit information
from its own copy of the repository, where annotations are always more
up to date than whatever is on the main repository; reconciler thus no
longer needs to fetch annotations on every cycle, enormously reducing
the amount of work reconciler needs to do.  If an annotation is missing
during the preparation of the release notes stage, reconciler will log
that as a warning, and move on to the next release it needs to prepare.

The annotator now has an HTTP API for the purpose of serving annotations
to the reconciler.  This API can be disabled using flag value
`--api-port=0` and is also not active when the `--loop-every=0` flag is
specified (for a single run rather than running in a loop).

The feature mentioned above can be disabled when interactively running the
reconciler by passing the `--commit-annotator-url=local` flag to the
`bazel run //release-controller:reconciler -- ...` command.  Under this
mode of operation, the reconciler behaves exactly as it behaved before,
with regards to annotations.

The reconciler now keeps track of the state of each release/version/OS
combo, and uses that state (in-memory) to decide whether to retry or repeat
an operation.  This saves enormously (in particular) on queries performed
to Discourse, which in the past has resulted in Discourse throttling the
reco

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,6 +6,7 @@ on:
     paths-ignore:
       - "release-index.yaml"
       - "replica-releases/**"
+      - "hostos-releases/**"
       - "release-controller/**"
       - "node-labels/**"
       - "facts-db/**"
@@ -13,6 +14,7 @@ on:
     paths-ignore:
       - "release-index.yaml"
       - "replica-releases/**"
+      - "hostos-releases/**"
       - "release-controller/**"
       - "trusted-neurons-alerts/**"
       - "node-labels/**"
