--- a/.github/workflows/dre-release.yaml
+++ b/.github/workflows/dre-release.yaml
@@ -11,7 +11,7 @@ concurrency:
 jobs:
   test:
     runs-on:
-      labels: dre-runner-custom
+      labels: dind-small
     container: ghcr.io/dfinity/dre/actions-runner:6413f2909a49329ecbf5371ee7ddf07a9799b625
     steps:
       - uses: actions/checkout@v4
@@ -30,7 +30,7 @@ jobs:
   release:
     needs: [test]
     runs-on:
-      labels: dre-runner-custom
+      labels: dind-small
     container: ghcr.io/dfinity/dre/actions-runner:6413f2909a49329ecbf5371ee7ddf07a9799b625
     permissions:
       contents: write
