--- a/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
@@ -21,7 +21,6 @@ candid = { workspace = true }
 serde = { workspace = true }
 ic-interfaces-registry = { workspace = true }
 ic-registry-keys = { workspace = true }
-itertools = { workspace = true }
 futures = { workspace = true }
 indexmap = { workspace = true }
 ic-base-types = { workspace = true }
@@ -35,6 +34,7 @@ ic-types = { workspace = true }
 mockall = { workspace = true }
 rewards-calculation = { workspace = true }
 node-provider-rewards-api = { workspace = true }
+serde_cbor = "0.11.2"
 
 [dev-dependencies]
 tokio = { workspace = true }
