--- a/rs/dre-canisters/node-provider-rewards/canister/api/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/canister/api/Cargo.toml
@@ -13,6 +13,8 @@ rust_decimal = { workspace = true }
 rewards-calculation = { workspace = true }
 candid = { workspace = true }
 serde = { workspace = true }
+
+itertools = { workspace = true }
 chrono = { version = "0.4.38", default-features = false, features = [
     "alloc",
     "clock",
