Refactor rewards calculation: update variable names and introduce rust_decimal_macros for improved clarity

--- a/rs/dre-canisters/node-provider-rewards/canister/api/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/canister/api/Cargo.toml
@@ -10,6 +10,7 @@ license.workspace = true
 [dependencies]
 ic-base-types = { workspace = true }
 rust_decimal = { workspace = true }
+rust_decimal_macros = { workspace = true }
 rewards-calculation = { workspace = true }
 candid = { workspace = true }
 serde = { workspace = true }
