--- a/rs/dre-canisters/node-provider-rewards/rewards-calculation/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/rewards-calculation/Cargo.toml
@@ -12,17 +12,17 @@ ic-cdk = { workspace = true }
 ic-types = { workspace = true }
 ic-base-types = { workspace = true }
 itertools = { workspace = true }
-num-traits = { workspace = true }
 rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
-tabled = { workspace = true }
+ic-protobuf = { workspace = true }
+
+[dev-dependencies]
 chrono = { version = "0.4.38", default-features = false, features = [
     "alloc",
     "clock",
     "serde",
 ] }
-ic-protobuf = { workspace = true }
-indexmap = { workspace = true }
+maplit = "1.0"
 
 [lib]
 name = "rewards_calculation"
