--- a/.github/workflows/push/action.yaml
+++ b/.github/workflows/push/action.yaml
@@ -36,7 +36,7 @@ runs:
         set -ex -o pipefail
         t=$(mktemp) ; trap 'rm -f "$t"' EXIT
         bazel query --noshow_progress "$SPEC" \
-          | xargs -I_target bazel run --test_env=HOME=/home/runner _target -- --tag ${GITHUB_SHA} | tee "$t" >&2
+          | xargs -I_target bazel run --test_env=HOME=/home/runner _target -- --tag ${GITHUB_SHA} 2>&1 | tee "$t" >&2
         if grep -q 'pushed blob' "$t"
         then
           echo "pushed=true" >> $GITHUB_OUTPUT
