Refine release controller deployment update
Please only merge after https://github.com/dfinity-ops/k8s/pull/1164 is in.

--- a/.github/workflows/release-controller.yaml
+++ b/.github/workflows/release-controller.yaml
@@ -101,7 +101,7 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' && steps.push-images.outputs.pushed == 'true' }}
         uses: ./.github/workflows/update-k8s-deployments
         with:
-          files-to-update: bases/apps/ic-release-controller/controller/controller.yaml bases/apps/ic-release-controller/commit-annotator/commit-annotator.yaml
+          files-to-update: bases/apps/ic-release-controller/controller/controller.yaml
           push-token: ${{ secrets.K8S_API_TOKEN }}
           component: release controller
 
