ci: upgrade CI environment to Ubuntu 22.04
### Major Changes

- **Upgrade to Ubuntu 22.04**:
  - Updated GitHub Actions workflows to use `ubuntu-22.04` instead of `ubuntu-20.04` for both `dashboard.yaml` and `update-dependencies.yaml`.

- **Update Rust Toolchain Commands**:
  - Utilize `rustup update stable` to ensure stable toolchain.
  - Install Rust tools with `cargo +stable install --locked` to lock dependencies.

--- a/.github/workflows/update-dependencies.yaml
+++ b/.github/workflows/update-dependencies.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   update:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     container: ghcr.io/dfinity/dre/actions-runner:6413f2909a49329ecbf5371ee7ddf07a9799b625
     steps:
       - name: Create GitHub App Token
@@ -34,8 +34,9 @@ jobs:
           sudo apt remove gcc-9 -y
           sudo apt install clang -y
 
-          cargo install cargo-upgrades
-          cargo install cargo-edit
+          rustup update stable
+          cargo +stable install --locked cargo-upgrades
+          cargo +stable install --locked cargo-edit
           cargo upgrade --recursive
 
           # Install taplo cli
