--- a/.github/workflows/trusted-neurons-alerts.yaml
+++ b/.github/workflows/trusted-neurons-alerts.yaml
@@ -88,7 +88,7 @@ jobs:
       - name: "📦 Push images to GitHub Container Registry"
         id: push-images
         uses: ./.github/workflows/push
-        if: ${{ github.ref == 'refs/heads/main' }}
+        if: ${{ github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch' }}
         with:
           spec: kind("oci_push", ...) intersect //trusted-neurons-alerts/...
           push-token: ${{ secrets.GITHUB_TOKEN }}
@@ -98,7 +98,7 @@ jobs:
       ########################################
 
       - name: "🤖 Update k8s deployments for trusted neurons alerts"
-        if: ${{ github.ref == 'refs/heads/main' && steps.push-images.outputs.pushed == 'true' }}
+        if: ${{ github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch' }}
         uses: ./.github/workflows/update-k8s-deployments
         with:
           files-to-update: bases/apps/trusted-neurons-slack-app/manifests.yaml
