--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ ahash = "0.8.11"
 anyhow = "1.0.98"
 async-recursion = "1.1.1"
 async-trait = "0.1.88"
-axum-otel-metrics = "0.8.1"
+axum-otel-metrics = "0.10.0"
 axum = "0.8.1"
 backoff = { version = "0.4.0", features = ["tokio"] }
 backon = "1.5.0"
@@ -152,7 +152,9 @@ lazy_static = "1.5.0"
 log = "0.4.27"
 lru = "0.12.5"
 num-traits = "0.2"
-opentelemetry = { version = "0.22.0", features = ["metrics"] }
+opentelemetry = { version = "0.28", features = ["metrics"] }
+opentelemetry_sdk = "0.28"
+opentelemetry-prometheus = "0.28"
 pretty_assertions = "1.4.1"
 pretty_env_logger = "0.5.0"
 prometheus-http-query = { version = "0.8.3", default-features = false, features = [
