--- a/.github/workflows/manage-runner-pre/action.yaml
+++ b/.github/workflows/manage-runner-pre/action.yaml
@@ -43,6 +43,13 @@ runs:
 
     - uses: bazelbuild/setup-bazelisk@v2
 
+
+    - name: "clean"
+      # This is desirable to make sure bazel does not use stale pre-built binaries
+      # Bazel actually keeps all intermediate objects so builds are still fast
+      run: bazel clean
+      shell: bash
+
     ########################################
     # Download and unpack cache
     ########################################
@@ -56,7 +63,7 @@ runs:
         # https://github.com/actions/cache/blob/main/examples.md#---bazel
         key: ${{ runner.os }}-bazel-${{ hashFiles('.bazelversion', '.bazelrc', 'WORKSPACE.bazel', 'Cargo.Bazel.lock', 'requirements.lock') }}
         restore-keys: |
-            ${{ runner.os }}-bazel-
+          ${{ runner.os }}-bazel-
 
     - name: "🧹 Clean bazel cache if we're preparing a new release"
       if: ${{ startsWith(github.ref, 'refs/tags/v') && !startsWith(runner.name, 'dre-runner-custom') }}
