Update dependencies in Cargo.lock to latest versions

--- a/.github/workflows/manage-runner-pre/action.yaml
+++ b/.github/workflows/manage-runner-pre/action.yaml
@@ -45,6 +45,7 @@ runs:
 
 
     - name: "clean"
+      if: ${{ !startsWith(runner.name, 'dre-runner-custom') }}
       # This is desirable to make sure bazel does not use stale pre-built binaries
       # Bazel actually keeps all intermediate objects so builds are still fast
       run: bazel clean
