--- a/.github/workflows/manage-runner-pre/action.yaml
+++ b/.github/workflows/manage-runner-pre/action.yaml
@@ -41,6 +41,9 @@ runs:
         tool-cache: true
         large-packages: true  # this is slow
 
+    - uses: bazelbuild/setup-bazelisk@v2
+
+
 
     - name: "🧹 Clean bazel cache if we're preparing a new release"
       if: ${{ startsWith(github.ref, 'refs/tags/v') && !startsWith(runner.name, 'dre-runner-custom') }}
