--- a/.github/workflows/manage-runner-pre/action.yaml
+++ b/.github/workflows/manage-runner-pre/action.yaml
@@ -41,9 +41,22 @@ runs:
         tool-cache: true
         large-packages: true  # this is slow
 
-    - uses: bazelbuild/setup-bazelisk@v2
+    - uses: bazelbuild/setup-bazelisk@v3
 
-
+    ########################################
+    # Download and unpack cache
+    ########################################
+    - name: "☁️ ⬇️ Restore bazel cache"
+      uses: actions/cache/restore@v4
+      if: ${{ !startsWith(runner.name, 'dre-runner-custom') }}
+      with:
+        path: "~/.cache/bazel"
+        # Configure cache updates
+        # https://github.com/actions/cache/blob/main/tips-and-workarounds.md#update-a-cache
+        # https://github.com/actions/cache/blob/main/examples.md#---bazel
+        key: ${{ runner.os }}-bazel-${{ hashFiles('.bazelversion', '.bazelrc', 'WORKSPACE.bazel', 'Cargo.Bazel.lock', 'requirements.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-bazel-
 
     - name: "🧹 Clean bazel cache if we're preparing a new release"
       if: ${{ startsWith(github.ref, 'refs/tags/v') && !startsWith(runner.name, 'dre-runner-custom') }}
