Make use of the keyring dependency optional in DRE, and build the dre-embedded tool which we ship with the containers without the keyring dependency, to eliminate the need for libdbus1 in the container.

--- a/rs/cli/BUILD.bazel
+++ b/rs/cli/BUILD.bazel
@@ -57,6 +57,7 @@ rust_binary(
         "//:cordoned_features.yaml",
     ],
     compile_data = [ "src/assets/subnet_topic_map.json" ],
+    crate_features = ["no-default-features"],
 )
 
 rust_library(
