Handle historical Failed annotations correctly as assuming that the change affects the artifact.
Also include clang in the built image.  cffi pip that runs during IC build requires clang.

--- a/images/ubuntu_24_04_packages.yaml
+++ b/images/ubuntu_24_04_packages.yaml
@@ -41,3 +41,4 @@ packages:
   - "git" # release controller and commit annotator
   - "python3" # release controller and commit annotator
   - "build-essential" # commit annotator (Bazel / Bazelisk)
+  - "clang" # partial IC build process run by target-determinator in commit annotator
