Switch release controller components to Ubuntu 24.04 / stop papering over annotation failures (#1499)

--- a/release-controller/BUILD.bazel
+++ b/release-controller/BUILD.bazel
@@ -293,7 +293,7 @@ small_tests_deps = ["forum", "publish_notes", "release_index_loader", "dryrun"] 
 # podman run -it --entrypoint=/bin/sh <sha256 printed>
 py_oci_image(
     name = "oci_image",
-    base = "@bazel_image_7_4_1",
+    base = "//images:ubuntu_24_04",
     binary = ":release-controller",
     tars = [],
 )
@@ -301,11 +301,33 @@ py_oci_image(
 # bazel run ...:oci_image_commit_annotator_load to load the
 # commit annotator container into Podman as an image, then
 # podman run -it --entrypoint=/bin/sh <sha256 printed>
+# Note that `podman run`
+# will require `--user $UID` or else Bazel will fail.
 py_oci_image(
     name = "oci_image_commit_annotator",
-    base = "@bazel_image_7_4_1",
+    base = "//images:ubuntu_24_04",
     binary = ":commit-annotator",
     tars = []
+)
+
+# bazel run ...:oci_image_release_notes_load loads a container
+# image with just the release notes code.  Like the targets above,
+# it is runnable via podman after loading.  This target does
+# not get published to the OCI repository.
+#
+# This target is useful to run the release notes process
+# from the container, to diagnose issues with specific commits
+# not being annotated properly (in conjunction with flag
+# `--commit-annotator-url=recreate`).  Note that `podman run`
+# will require `--user $UID` or else Bazel will fail.
+# See heading Generate release notes locally in file README.txt
+# on this folder for more details on local release notes generation.
+py_oci_image(
+    name = "oci_image_release_notes",
+    base = "//images:ubuntu_24_04",
+    binary = ":release-notes",
+    tars = [],
+    publish = False,
 )
 
 exports_files(["README.md"])
