--- a/images/ubuntu_24_04_packages.yaml
+++ b/images/ubuntu_24_04_packages.yaml
@@ -44,3 +44,4 @@ packages:
   - "python3" # release controller and commit annotator
   - "build-essential" # commit annotator (Bazel / Bazelisk)
   - "clang-20" # partial IC build process run by target-determinator in commit annotator
+  - "libffi-dev" # necessary to build the IC just like clang
