--- a/cordoned_features.yaml
+++ b/cordoned_features.yaml
@@ -137,3 +137,9 @@ features:
   - feature: data_center
     value: an1
     explanation: "freeing up nodes from AN1 data center for an HSM-less redeployment"
+  - feature: data_center
+    value: im1
+    explanation: "did not finish onboarding"
+  - feature: data_center
+    value: im2
+    explanation: "did not finish onboarding"
