feat(node-provider-rewards): Add query call measurement and telemetry
Introduce functionality to exercise, hourly, the query calls `get_node_providers_rewards` and `get_node_provider_rewards_calculation`
based on current time, and measure execution cost (instruction count) for them.

Adds `chrono` dependency for date/time handling.  The method to determine the next 1 AM has been changed.

--- a/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 async-trait = { workspace = true }
+chrono = { workspace = true }
 ic-canisters-http-types = { workspace = true }
 ic-cdk = { workspace = true }
 ic-cdk-timers = { workspace = true }
