--- a/release-index.yaml
+++ b/release-index.yaml
@@ -1,5 +1,9 @@
 releases:
   # NOTE: Make sure to mark security hotfixes with the `security_fix: true` flag.
+  - rc_name: rc--2025-05-01_03-23
+    versions:
+      - name: base
+        version: f195ba756bc3bf170a2888699e5e74101fdac6ba
   - rc_name: rc--2025-04-24_03-18
     versions:
       - name: base
